Frontend: Fix layout to not have scrollbars when everything fits in the browser window.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,5 @@
 /* Basic generic stuff */
 html, body {
-  width:        100%;
-  height:       100%;
   margin:       0;
   padding:      0;
   background: #ffefd5;
@@ -120,7 +118,6 @@ div.logo {
   font-weight: bold;
   font-size:   3em;
   text-align:  center;
-  margin:      10px;
   color:       #5d3856;
 }
 
